Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/receiver/StaticThings.out
StaticThings.java:10:26: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:13:28: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:29:32: compiler.err.non-static.cant.be.ref: kindname.variable, this
StaticThings.java:31:37: compiler.err.non-static.cant.be.ref: kindname.variable, this
4 errors
